--- a/.classpath
+++ b/.classpath
@@ -11,7 +11,6 @@
 	<classpathentry kind="lib" path="C:/Users/HungPham/eclipse-workspace/pttk_final/lib/jsp-api-2.3.1.jar"/>
 	<classpathentry kind="lib" path="C:/Users/HungPham/eclipse-workspace/pttk_final/lib/jstl-1.2.jar"/>
 	<classpathentry kind="lib" path="C:/Users/HungPham/eclipse-workspace/pttk_final/lib/mysql-connector-java-8.0.13.jar"/>
-	<classpathentry kind="lib" path="C:/Users/HungPham/eclipse-workspace/pttk_final/lib/servlet-api-2.5-6.0.2.jar"/>
 	<classpathentry kind="lib" path="C:/Users/HungPham/eclipse-workspace/pttk_final/lib/jar_files/antlr-2.7.7.jar"/>
 	<classpathentry kind="lib" path="C:/Users/HungPham/eclipse-workspace/pttk_final/lib/jar_files/byte-buddy-1.11.8.jar"/>
 	<classpathentry kind="lib" path="C:/Users/HungPham/eclipse-workspace/pttk_final/lib/jar_files/classmate-1.5.1.jar"/>
@@ -29,5 +28,6 @@
 	<classpathentry kind="lib" path="C:/Users/HungPham/eclipse-workspace/pttk_final/lib/jar_files/jboss-transaction-api_1.2_spec-1.1.1.Final.jar"/>
 	<classpathentry kind="lib" path="C:/Users/HungPham/eclipse-workspace/pttk_final/lib/jar_files/stax-ex-1.8.jar"/>
 	<classpathentry kind="lib" path="C:/Users/HungPham/eclipse-workspace/pttk_final/lib/jar_files/txw2-2.3.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/HungPham/eclipse-workspace/pttk_final/lib/javax.servlet-api-3.0.1.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
