--- a/.classpath
+++ b/.classpath
@@ -1,58 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src/main/java"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-16">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/apache-tomcat-8.5.61"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-<<<<<<< HEAD
-	<classpathentry kind="lib" path="C:/Users/admin/Downloads/book_store_pttk/lib/javax.servlet-api-3.0.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/admin/Downloads/book_store_pttk/lib/jsp-api-2.3.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/admin/Downloads/book_store_pttk/lib/jstl-1.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/admin/Downloads/book_store_pttk/lib/mysql-connector-java-8.0.13.jar"/>
-	<classpathentry kind="lib" path="C:/Users/admin/Downloads/book_store_pttk/lib/servlet-api-2.5-6.0.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/admin/Downloads/book_store_pttk/lib/jar_files/antlr-2.7.7.jar"/>
-	<classpathentry kind="lib" path="C:/Users/admin/Downloads/book_store_pttk/lib/jar_files/byte-buddy-1.11.8.jar"/>
-	<classpathentry kind="lib" path="C:/Users/admin/Downloads/book_store_pttk/lib/jar_files/classmate-1.5.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/admin/Downloads/book_store_pttk/lib/jar_files/FastInfoset-1.2.15.jar"/>
-	<classpathentry kind="lib" path="C:/Users/admin/Downloads/book_store_pttk/lib/jar_files/hibernate-commons-annotations-5.1.2.Final.jar"/>
-	<classpathentry kind="lib" path="C:/Users/admin/Downloads/book_store_pttk/lib/jar_files/hibernate-core-5.5.5.Final.jar"/>
-	<classpathentry kind="lib" path="C:/Users/admin/Downloads/book_store_pttk/lib/jar_files/istack-commons-runtime-3.0.7.jar"/>
-	<classpathentry kind="lib" path="C:/Users/admin/Downloads/book_store_pttk/lib/jar_files/jandex-2.2.3.Final.jar"/>
-	<classpathentry kind="lib" path="C:/Users/admin/Downloads/book_store_pttk/lib/jar_files/javassist-3.27.0-GA.jar"/>
-	<classpathentry kind="lib" path="C:/Users/admin/Downloads/book_store_pttk/lib/jar_files/javax.activation-api-1.2.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/admin/Downloads/book_store_pttk/lib/jar_files/javax.persistence-api-2.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/admin/Downloads/book_store_pttk/lib/jar_files/jaxb-api-2.3.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/admin/Downloads/book_store_pttk/lib/jar_files/jaxb-runtime-2.3.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/admin/Downloads/book_store_pttk/lib/jar_files/jboss-logging-3.4.2.Final.jar"/>
-	<classpathentry kind="lib" path="C:/Users/admin/Downloads/book_store_pttk/lib/jar_files/jboss-transaction-api_1.2_spec-1.1.1.Final.jar"/>
-	<classpathentry kind="lib" path="C:/Users/admin/Downloads/book_store_pttk/lib/jar_files/stax-ex-1.8.jar"/>
-	<classpathentry kind="lib" path="C:/Users/admin/Downloads/book_store_pttk/lib/jar_files/txw2-2.3.1.jar"/>
-=======
-	<classpathentry kind="lib" path="C:/Users/HungPham/eclipse-workspace/pttk_final/lib/jsp-api-2.3.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/HungPham/eclipse-workspace/pttk_final/lib/jstl-1.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/HungPham/eclipse-workspace/pttk_final/lib/mysql-connector-java-8.0.13.jar"/>
-	<classpathentry kind="lib" path="C:/Users/HungPham/eclipse-workspace/pttk_final/lib/jar_files/antlr-2.7.7.jar"/>
-	<classpathentry kind="lib" path="C:/Users/HungPham/eclipse-workspace/pttk_final/lib/jar_files/byte-buddy-1.11.8.jar"/>
-	<classpathentry kind="lib" path="C:/Users/HungPham/eclipse-workspace/pttk_final/lib/jar_files/classmate-1.5.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/HungPham/eclipse-workspace/pttk_final/lib/jar_files/FastInfoset-1.2.15.jar"/>
-	<classpathentry kind="lib" path="C:/Users/HungPham/eclipse-workspace/pttk_final/lib/jar_files/hibernate-commons-annotations-5.1.2.Final.jar"/>
-	<classpathentry kind="lib" path="C:/Users/HungPham/eclipse-workspace/pttk_final/lib/jar_files/hibernate-core-5.5.5.Final.jar"/>
-	<classpathentry kind="lib" path="C:/Users/HungPham/eclipse-workspace/pttk_final/lib/jar_files/istack-commons-runtime-3.0.7.jar"/>
-	<classpathentry kind="lib" path="C:/Users/HungPham/eclipse-workspace/pttk_final/lib/jar_files/jandex-2.2.3.Final.jar"/>
-	<classpathentry kind="lib" path="C:/Users/HungPham/eclipse-workspace/pttk_final/lib/jar_files/javassist-3.27.0-GA.jar"/>
-	<classpathentry kind="lib" path="C:/Users/HungPham/eclipse-workspace/pttk_final/lib/jar_files/javax.activation-api-1.2.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/HungPham/eclipse-workspace/pttk_final/lib/jar_files/javax.persistence-api-2.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/HungPham/eclipse-workspace/pttk_final/lib/jar_files/jaxb-api-2.3.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/HungPham/eclipse-workspace/pttk_final/lib/jar_files/jaxb-runtime-2.3.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/HungPham/eclipse-workspace/pttk_final/lib/jar_files/jboss-logging-3.4.2.Final.jar"/>
-	<classpathentry kind="lib" path="C:/Users/HungPham/eclipse-workspace/pttk_final/lib/jar_files/jboss-transaction-api_1.2_spec-1.1.1.Final.jar"/>
-	<classpathentry kind="lib" path="C:/Users/HungPham/eclipse-workspace/pttk_final/lib/jar_files/stax-ex-1.8.jar"/>
-	<classpathentry kind="lib" path="C:/Users/HungPham/eclipse-workspace/pttk_final/lib/jar_files/txw2-2.3.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/HungPham/eclipse-workspace/pttk_final/lib/javax.servlet-api-3.0.1.jar"/>
->>>>>>> aae403714737818f8070d71461285ad86e2fecce
-	<classpathentry kind="output" path="build/classes"/>
+	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
+	<classpathentry kind="lib" path="C:/Users/admin/eclipse-workspace/book_store_pttk/lib/jar_files/antlr-2.7.7.jar"/>
+	<classpathentry kind="lib" path="C:/Users/admin/eclipse-workspace/book_store_pttk/lib/jar_files/byte-buddy-1.11.8.jar"/>
+	<classpathentry kind="lib" path="C:/Users/admin/eclipse-workspace/book_store_pttk/lib/jar_files/classmate-1.5.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/admin/eclipse-workspace/book_store_pttk/lib/jar_files/FastInfoset-1.2.15.jar"/>
+	<classpathentry kind="lib" path="C:/Users/admin/eclipse-workspace/book_store_pttk/lib/jar_files/hibernate-commons-annotations-5.1.2.Final.jar"/>
+	<classpathentry kind="lib" path="C:/Users/admin/eclipse-workspace/book_store_pttk/lib/jar_files/hibernate-core-5.5.5.Final.jar"/>
+	<classpathentry kind="lib" path="C:/Users/admin/eclipse-workspace/book_store_pttk/lib/jar_files/istack-commons-runtime-3.0.7.jar"/>
+	<classpathentry kind="lib" path="C:/Users/admin/eclipse-workspace/book_store_pttk/lib/jar_files/jandex-2.2.3.Final.jar"/>
+	<classpathentry kind="lib" path="C:/Users/admin/eclipse-workspace/book_store_pttk/lib/jar_files/javassist-3.27.0-GA.jar"/>
+	<classpathentry kind="lib" path="C:/Users/admin/eclipse-workspace/book_store_pttk/lib/jar_files/javax.activation-api-1.2.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/admin/eclipse-workspace/book_store_pttk/lib/jar_files/javax.persistence-api-2.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/admin/eclipse-workspace/book_store_pttk/lib/jar_files/jaxb-api-2.3.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/admin/eclipse-workspace/book_store_pttk/lib/jar_files/jaxb-runtime-2.3.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/admin/eclipse-workspace/book_store_pttk/lib/jar_files/jboss-logging-3.4.2.Final.jar"/>
+	<classpathentry kind="lib" path="C:/Users/admin/eclipse-workspace/book_store_pttk/lib/jar_files/jboss-transaction-api_1.2_spec-1.1.1.Final.jar"/>
+	<classpathentry kind="lib" path="C:/Users/admin/eclipse-workspace/book_store_pttk/lib/jar_files/stax-ex-1.8.jar"/>
+	<classpathentry kind="lib" path="C:/Users/admin/eclipse-workspace/book_store_pttk/lib/jar_files/txw2-2.3.1.jar"/>
+	<classpathentry kind="output" path="bin"/>
 </classpath>
