--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
+encoding//src/main/java/controller/Login.java=UTF-8
 encoding//src/main/webapp/WEB-INF/home/index.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/login/index.jsp=UTF-8
