--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,6 @@
 eclipse.preferences.version=1
 encoding//src/main/java/controller/Login.java=UTF-8
+encoding//src/main/java/controller/ProductManagerment.java=UTF-8
 encoding//src/main/java/controller/Profile.java=UTF-8
 encoding//src/main/java/controller/Register.java=UTF-8
 encoding//src/main/webapp/WEB-INF/home/index.jsp=UTF-8
